# notes_bot

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
deploy/: docker-compose.yaml
notes/: jobs.py  main.py  settings.py  utils.py  workers.py
notes/notion/: client.py  enums.py  errors.py  mixin.py  schemas.py  wrapper.py
notes/telegram/: bot.py  errors.py  middlewares.py  utils.py
notes/telegram/handlers/: __init__.py  inline.py  message.py
